Fix errors found from clean gradle build
After doing a clean gradle build, errors are found. Karma is looking for package karma-firefox launcher--add it to package.json. Add some instructions from OutOfMemoryError when trying to run Jetty server.